// Vitest Snapshot v1

exports[`organisms::AddNode > can render the form without the title 1`] = `
<DocumentFragment>
  <div
    class="mantine-Stack-root mantine-ngu3vw"
  >
    <form>
      <div
        class="mantine-Stack-root mantine-lfk3cq"
      >
        <div
          class="mantine-TextInput-root mantine-18udhi"
        >
          <label
            class="mantine-TextInput-label mantine-7802ha"
            for="address"
            id="address-label"
          >
            Node address
            <span
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              aria-label="Node address"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-dagq8e"
              id="address"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-TextInput-root mantine-18udhi"
        >
          <label
            class="mantine-TextInput-label mantine-7802ha"
            for="port"
            id="port-label"
          >
            Port
            <span
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              aria-label="Port"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-dagq8e"
              id="port"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-TextInput-root mantine-18udhi"
        >
          <label
            class="mantine-TextInput-label mantine-7802ha"
            for="user"
            id="user-label"
          >
            Login (optional)
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-dagq8e"
              id="user"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-PasswordInput-root mantine-18udhi"
        >
          <label
            class="mantine-PasswordInput-label mantine-7802ha"
            for="password"
            id="password-label"
          >
            Password (optional)
          </label>
          <div
            class="mantine-PasswordInput-wrapper mantine-12sbrde"
          >
            <div
              aria-invalid="false"
              class="mantine-PasswordInput-defaultVariant mantine-PasswordInput-input mantine-PasswordInput-input mantine-1i2duzg"
            >
              <input
                class="mantine-PasswordInput-innerInput mantine-1bj8gkk"
                id="password"
                type="password"
                value=""
              />
            </div>
            <div
              class="mantine-o3oqoy mantine-PasswordInput-rightSection"
            >
              <button
                aria-hidden="true"
                class="mantine-ActionIcon-hover mantine-ActionIcon-root mantine-PasswordInput-visibilityToggle mantine-vao037"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.5 11C4.80285 11 2.52952 9.62184 1.09622 7.50001C2.52952 5.37816 4.80285 4 7.5 4C10.1971 4 12.4705 5.37816 13.9038 7.50001C12.4705 9.62183 10.1971 11 7.5 11ZM7.5 3C4.30786 3 1.65639 4.70638 0.0760002 7.23501C-0.0253338 7.39715 -0.0253334 7.60288 0.0760014 7.76501C1.65639 10.2936 4.30786 12 7.5 12C10.6921 12 13.3436 10.2936 14.924 7.76501C15.0253 7.60288 15.0253 7.39715 14.924 7.23501C13.3436 4.70638 10.6921 3 7.5 3ZM7.5 9.5C8.60457 9.5 9.5 8.60457 9.5 7.5C9.5 6.39543 8.60457 5.5 7.5 5.5C6.39543 5.5 5.5 6.39543 5.5 7.5C5.5 8.60457 6.39543 9.5 7.5 9.5Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mantine-1ne3752"
        />
        <div
          class="mantine-Group-root mantine-147cgkf"
        >
          <button
            class="mantine-Button-filled mantine-Button-root mantine-Group-child mantine-1bqp2m7"
            type="submit"
          >
            <div
              class="mantine-3xbgk5 mantine-Button-inner"
            >
              <span
                class="mantine-qo1k2 mantine-Button-label"
              >
                Save
              </span>
            </div>
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`organisms::AddNode > renders without exploding 1`] = `
<DocumentFragment>
  <div
    class="mantine-Stack-root mantine-ngu3vw"
  >
    <h3
      class="mantine-Title-root mantine-ha7ih2"
    >
      Add a new node
    </h3>
    <form>
      <div
        class="mantine-Stack-root mantine-lfk3cq"
      >
        <div
          class="mantine-TextInput-root mantine-18udhi"
        >
          <label
            class="mantine-TextInput-label mantine-7802ha"
            for="address"
            id="address-label"
          >
            Node address
            <span
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              aria-label="Node address"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-dagq8e"
              id="address"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-TextInput-root mantine-18udhi"
        >
          <label
            class="mantine-TextInput-label mantine-7802ha"
            for="port"
            id="port-label"
          >
            Port
            <span
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              aria-label="Port"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-dagq8e"
              id="port"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-TextInput-root mantine-18udhi"
        >
          <label
            class="mantine-TextInput-label mantine-7802ha"
            for="user"
            id="user-label"
          >
            Login (optional)
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-dagq8e"
              id="user"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-PasswordInput-root mantine-18udhi"
        >
          <label
            class="mantine-PasswordInput-label mantine-7802ha"
            for="password"
            id="password-label"
          >
            Password (optional)
          </label>
          <div
            class="mantine-PasswordInput-wrapper mantine-12sbrde"
          >
            <div
              aria-invalid="false"
              class="mantine-PasswordInput-defaultVariant mantine-PasswordInput-input mantine-PasswordInput-input mantine-1i2duzg"
            >
              <input
                class="mantine-PasswordInput-innerInput mantine-1bj8gkk"
                id="password"
                type="password"
                value=""
              />
            </div>
            <div
              class="mantine-o3oqoy mantine-PasswordInput-rightSection"
            >
              <button
                aria-hidden="true"
                class="mantine-ActionIcon-hover mantine-ActionIcon-root mantine-PasswordInput-visibilityToggle mantine-vao037"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.5 11C4.80285 11 2.52952 9.62184 1.09622 7.50001C2.52952 5.37816 4.80285 4 7.5 4C10.1971 4 12.4705 5.37816 13.9038 7.50001C12.4705 9.62183 10.1971 11 7.5 11ZM7.5 3C4.30786 3 1.65639 4.70638 0.0760002 7.23501C-0.0253338 7.39715 -0.0253334 7.60288 0.0760014 7.76501C1.65639 10.2936 4.30786 12 7.5 12C10.6921 12 13.3436 10.2936 14.924 7.76501C15.0253 7.60288 15.0253 7.39715 14.924 7.23501C13.3436 4.70638 10.6921 3 7.5 3ZM7.5 9.5C8.60457 9.5 9.5 8.60457 9.5 7.5C9.5 6.39543 8.60457 5.5 7.5 5.5C6.39543 5.5 5.5 6.39543 5.5 7.5C5.5 8.60457 6.39543 9.5 7.5 9.5Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mantine-1ne3752"
        />
        <div
          class="mantine-Group-root mantine-147cgkf"
        >
          <button
            class="mantine-Button-filled mantine-Button-root mantine-Group-child mantine-1bqp2m7"
            type="submit"
          >
            <div
              class="mantine-3xbgk5 mantine-Button-inner"
            >
              <span
                class="mantine-qo1k2 mantine-Button-label"
              >
                Save
              </span>
            </div>
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
